# ics-openvpn

./: .gitignore  .gitmodules  .hgignore  .hgsigs  .hgsub  .hgsubstate  .hgtags  .project  .travis.yml  0  9  Ai  AndroidManifest.xml  CNAME  CONTRIBUTING  FAQ-be.html  FAQ-ca.html  FAQ-cs.html  FAQ-da.html  FAQ-de.html  FAQ-es.html  FAQ-et.html  FAQ-fr.html  FAQ-hu.html  FAQ-in.html  FAQ-it.html  FAQ-ja.html  FAQ-ko.html  FAQ-nl.html  FAQ-no.html  FAQ-pl.html  FAQ-pt.html  FAQ-ro.html  FAQ-ru.html  FAQ-sl.html  FAQ-sv.html  FAQ-tr.html  FAQ-uk.html  FAQ-zh-Hans.html  FAQ-zh-Hant.html  (+25 more)
.github/ISSUE_TEMPLATE/: feature.md  issue.md
.github/workflows/: build.yaml  codeql.yml  gradle.yml
assets/: minivpn
client/: build.gradle
doc/: CLA-individual.md  CLA-org.md  CLA.md  LICENSE.txt  README.txt  todo.txt
doc/automated_doc/: pull-request.html
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  Application.mk  buildall.mk  icsandroid.cpp  icsandroid.h  jbcrypto.cpp  jniglue.c  prebuilt.mk
lzo/: Android.mk  Makefile  Makefile.in  config.status  libtool
lzo/examples/: Makefile
lzo/include/: Makefile
lzo/lzotest/: Makefile
lzo/minilzo/: Makefile
lzo/src/: Makefile  miniacc.h
lzo/tests/: Makefile
main/: build.gradle  build.gradle.kts
main/jni/: Android.mk  Application.mk  dummy.cpp  jbcrypto.cpp  jniglue.c  scan_ifs.c
main/lzo/: CMakeLists.txt  Makefile.am  Makefile.in  NEWS  README.ANDROID  aclocal.m4  config.h  configure  configure.ac
main/lzo/B/dos32/: bc_pp.bat  dj2.bat  dm.bat  emx.bat  highc.bat  ndp.bat  sc.bat  wc.bat  zc.bat
main/lzo/B/generic/: Makefile  build.sh  clean.sh
main/lzo/B/os2/: emx.bat  wc.bat  zc.bat
main/lzo/B/win32/: bc.bat  cygwin.bat  dm.bat  ic.bat  lccwin32.bat  mingw.bat  mwerks.bat  pellesc.bat  pgi.bat  pw32.bat  rsxnt.bat  sc.bat  vc.bat  vc_dll.bat  wc.bat
main/lzo/B/win64/: ic.bat  ic_dll.bat  vc.bat  vc_dll.bat
main/lzo/asm/i386/src/: enter.ash  leave.ash  lzo1c_d.ash  lzo1c_s1.S  lzo1f_d.ash  lzo1f_f1.S  lzo1x_d.ash  lzo1x_f1.S  lzo1x_s1.S  lzo1y_f1.S  lzo1y_s1.S  lzo_asm.h
main/lzo/asm/i386/src_gas/: asminit.def  lzo1c_s1.S  lzo1f_f1.S  lzo1x_f1.S  lzo1x_s1.S  lzo1y_f1.S  lzo1y_s1.S
main/lzo/asm/i386/src_gas/all/: asm_all.S
main/lzo/asm/i386/src_masm/: asminit.def  lzo1c_s1.asm  lzo1f_f1.asm  lzo1x_f1.asm  lzo1x_s1.asm  lzo1y_f1.asm  lzo1y_s1.asm
main/lzo/asm/i386/src_masm/all/: asm_all.asm
main/lzo/asm/i386/src_nasm/: asminit.def  lzo1c_s1.asm  lzo1f_f1.asm  lzo1x_f1.asm  lzo1x_s1.asm  lzo1y_f1.asm  lzo1y_s1.asm
main/lzo/asm/i386/src_nasm/all/: asm_all.asm
main/lzo/autoconf/: ar-lib  compile  local.m4  missing  py-compile  ylwrap
main/lzo/doc/: LZO.TXT
main/lzo/examples/: dict.c  lzopack.c  overlap.c  portab.h  portab_a.h  precomp.c  precomp2.c  simple.c
main/lzo/include/lzo/: lzo1.h  lzo1a.h  lzo1b.h  lzo1c.h  lzo1f.h  lzo1x.h  lzo1y.h  lzo1z.h  lzo2a.h  lzo_asm.h  lzoconf.h  lzoutil.h
main/lzo/lzotest/: asm.h  db.h  lzotest.c  wrap.h  wrapmisc.h
main/lzo/minilzo/: README.LZO  minilzo.c  minilzo.h
main/lzo/src/: compr1b.h  compr1c.h  config1.h  config1a.h  config1b.h  config1c.h  config1f.h  config1x.h  config1y.h  config1z.h  config2a.h  lzo1.c  lzo1_99.c  lzo1_cm.ch  lzo1_d.ch  lzo1a.c  lzo1a_99.c  lzo1a_cm.ch  lzo1a_cr.ch  lzo1a_de.h  lzo1b_1.c  lzo1b_2.c  lzo1b_3.c  lzo1b_4.c  lzo1b_5.c  lzo1b_6.c  lzo1b_7.c  lzo1b_8.c  lzo1b_9.c  lzo1b_99.c  lzo1b_9x.c  lzo1b_c.ch  lzo1b_cc.c  lzo1b_cc.h  lzo1b_cm.ch  lzo1b_cr.ch  lzo1b_d.ch  lzo1b_d1.c  lzo1b_d2.c  lzo1b_de.h  (+69 more)
main/lzo/tests/: align.c  chksum.c  promote.c  sizes.c
main/lzo/util/: check.sh  checkasm.sh  notime.pl  overlap.sh  shortf.pl  table.pl  uncompr.pl
main/misc/: build-native.bat  build-native.sh  dump_syms.sh  fetchtranslations.sh  genFAQ.py  header.html  prepareovpn3.sh
main/openssl/: Apps-config-host.mk  Apps-config-target.mk  Apps.mk  CleanSpec.mk  Crypto-config-host.mk  Crypto-config-target.mk  Crypto-config-trusty.mk  Crypto.mk  Ssl-config-host.mk  Ssl-config-target.mk  Ssl.mk  android-config.mk  build-config-32.mk  build-config-64.mk  build-config-trusty.mk  check-all-builds.sh  flavor.mk  import_openssl.sh  ndk-build-clear.mk  ndk-build.mk  openssl.config  openssl.version  rules.mk
main/openvpn/: .gitignore  Android.mk  README.ec  config-version.h  config.h  configure.ac  openvpn.sln
main/ovpn3/: Android.mk
misc/: Banner_besser.psd  Banner_besser_tv.psd  build-native.bat  build-native.sh  code-transparency.pem  debug-openvpn.sh  dump_syms.sh  feature.psd  fetchtranslations.sh  genFAQ.py  ic_quick.ai  ic_stat_vpn.ai  icon.ai  ignore_rsync_breakpadsync  logo.ai  promo.ai  todo-keychain-crash.txt
openssl/: Android.mk  CleanSpec.mk  README.android  ThirdPartyProject.prop  openssl.config
openssl/apps/: Android.mk
openssl/crypto/: Android.mk
openssl/patches/: README  crypto_Android.mk  sslv3_uninit_padding.patch
openssl/ssl/: Android.mk  ssl.h  ssl3.h  ssl_locl.h  tls1.h
openvpn/: .gitignore  0001-initial-android-hacks.patch  Android.mk  README.IPv6  TODO.IPv6  config-version.h  config.h
openvpn-aar/: .gitignore  build.gradle
openvpn/doc/: openvpn.8
openvpn/src/: Makefile.am
ovpn3/: Android.mk
remoteExample/: LICENSE.remoteExample  build.gradle  proguard-rules.pro
res/drawable/: ic_notification_icon.xml  notification_icon.xml
res/layout/: about.xml  api_confirm.xml  basic_settings.xml  config.xml  config_converter.xml  faq.xml  file_dialog.xml  file_dialog_main.xml  file_dialog_row.xml  file_select.xml  fragment_senddump.xml  keystore_selector.xml  log_entry.xml  (+12 more)
res/layout-sw600dp/: log_fragment.xml
res/layout-w720dp/: logwindow.xml
sample/: build.gradle
snappy/: Android.mk
stylesheets/: icsopenvpn.css  stylesheet.css
tlsexternalcertprovider/: build.gradle
tunnelblick-patches/: 02-tunnelblick-openvpn_xorpatch-a.diff  03-tunnelblick-openvpn_xorpatch-b.diff  04-tunnelblick-openvpn_xorpatch-c.diff  05-tunnelblick-openvpn_xorpatch-d.diff  06-tunnelblick-openvpn_xorpatch-e.diff
vpndialogxposed/: AndroidManifest.xml  build.gradle
(+970 files in other folders)
